# streamlit-aggrid-examples

./: 0_Getting_started.py  20_cell_renderer_class_example.py  30_virtual_columns.py  40_example_highlight_change.py  50_themes_and_pre_selection.py  60_rich_cell_editor.py  70_nested_grids.py  80_saving_columns_state.py  81_Tooltips.py  82_Handling_Grid_events.py  83_fetching_real_time_data.py  90_main_example.py  99_one_billion_row.py  README.md  ad.html  ads.txt  auto_size.py  cell_renderer_class_example.py  column_index.py  custom_css.py  custom_tooltip.py  example.py  example_highlight_change.py  fixed_key_example copy.py  fixed_key_example.py  forms.py  gridOptions_playground copy.py  gridOptions_playground.py  json_data.json  json_data.py  json_data_gridOptions.json  licensing_example.py  main_example.py  native_grid_compare.py  nested_grids.py  olympic-winners.json  pinned_rows.py  pyproject.toml  save_column_states.py  saving_grid_state.py  (+7 more)
pages/: 10_ Setting_a_fixed_key.py  11_Editing_data.py  15_ Rerun_Triggers.py  15_ Streamlit_Rerun_Triggers.py  20_Editing_data.py  21_Getting AgGrid data.py  22_Selecting_data.py  2_streamlit_demo.py.old  30_Basic_config_and_GridOptionsBuilder.py  40_Advanced_config_and JsCode.py  50_Themes.py  60_Licensing.py  99_Cookbook.py
