[tool.poetry]
name = "streamlit-aggrid-examples"
version = "0.1.0"
description = ""
authors = ["Pablo Fonseca"]

[tool.poetry.dependencies]
python = ">=3.7.8,<4.0"
streamlit-aggrid = {path = "streamlit_aggrid-0.3.3-py3-none-any.whl"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
