[tool.poetry]
name = "streamlit-aggrid-examples"
version = "1.0.0"
description = ""
authors = ["Pablo Fonseca"]


[tool.poetry.dependencies]
python = ">=3.8, !=3.9.7"
streamlit-aggrid = "^1.0.4-2"
streamlit-code-editor = "^0.1.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
